--- a/vite-react-app/src/components/Navbar.css
+++ b/vite-react-app/src/components/Navbar.css
@@ -1,8 +1,32 @@
-.nav-container {
+.navbar-container {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.notification-top {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 0;
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.notification-text {
+    font-size: 0.85rem;
+    font-weight: 350;
+}
+
+.notification-text span {
+    text-decoration: underline;
+    text-underline-offset: 0.2rem;
+    font-weight: 450;
+}
+
+.navbar {
     height: 4rem;
     display: flex;
     align-items: center;
