--- a/vite-react-app/src/components/Home.css
+++ b/vite-react-app/src/components/Home.css
@@ -1,23 +1,107 @@
 .home {
-    overflow: auto; 
-    max-height: 50rem; 
+   
     display: flex;
     flex-direction: column;
-    gap: 5rem;
-    /* background-color: #7e7e7e;  */
+    padding-right: 3.5rem;
+    gap: 1rem;
 }
 
-.home h1 {
-    font-size: 3rem;
-    text-decoration: none;
-    font-weight: 400;
-    padding-bottom: 1rem;
-    margin-top: 2rem;
+.text-card {
+    flex-grow: 1;
+    border: 0.01rem solid #a2a2a2;
+    padding: 2rem;
+    border-radius: 2rem;
+    background-color: #f9f7f7;
 }
 
 .piechart {
     display: flex;
     flex-direction: row;
-    align-items: left;
+    align-items: center;
     gap: 5rem;
+}
+
+.piechart-text {
+    display: flex;
+    flex-direction: column;
+    line-height: 4.35rem;
+    font-size: 3rem;
+    justify-content: center;
+}
+
+.piechart-row {
+    font-weight: 300;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+}
+
+.piechart-color {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 1rem;
+}
+
+.piechart-label {
+    text-transform: capitalize;
+}
+
+.piechart-value {
+    font-weight: 600;
+}
+
+.text-card h1 {
+    font-size: 2rem;
+    text-decoration: none;
+    font-weight: 400;
+}
+
+.text-card h2 {
+    font-size: 3rem;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.text-card h3 {
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: 300;
+    color: #2c2c2c;
+}
+
+.row-graphs {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.admin-graphs {
+    border: 0.01rem solid #a2a2a2;
+    padding: 2rem;
+    border-radius: 2rem;
+    background-color: #f9f7f7;
+}
+
+.admin-graphs h1, .hot-products h1 {
+    font-size: 2rem;
+    text-decoration: none;
+    font-weight: 400;
+}
+
+.admin-graphs h2 {
+    font-size: 3rem;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.admin-graphs h3 {
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: 300;
+    color: #2c2c2c;
+}
+
+.admin-graphs .piechart-title {
+    font-size: 1.6rem;
 }
