--- a/vite-react-app/src/pages/Admin.css
+++ b/vite-react-app/src/pages/Admin.css
@@ -8,30 +8,25 @@
 }
 
 .admin-main {
-    flex-grow: 1;
-    /* display: flex;
-    flex-direction: column;
-    align-items: left; */
+    overflow: auto; 
+    max-height: 85vh;
     padding-left: 5rem;
     font-size: 3rem;
-    text-align: left;
 }
 
 .admin-box {
-    flex-grow: 1;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    height:85vh;
 }
 
 .admin-sidebar {
     flex-basis: 10vw;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     padding: 2rem;
-    border: 0.05rem solid #131313;
-    background-color: #EFEFEF;
+    border: 0.01rem solid #a2a2a2;
+    background-color: #f9f7f7;
     border-radius: 1rem;
 }
 
@@ -39,6 +34,7 @@
     flex-basis: 5vh;
     font-size: 3rem;
     padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
 }
 
 .admin-sidebar button {
@@ -46,18 +42,19 @@
     font-weight: 400;
     text-decoration: none;
     border: none;
-    border-top: 0.125rem solid #131313;
+    border-radius: 0.7rem;
+    background-color: #f9f7f7;
     text-align: left;
     padding: 1rem 0.8rem;
 }
 
 .admin-sidebar button:hover {
     cursor: pointer;
-    background-color: rgb(217, 213, 213);
+    background-color: #f1efef;
 }
 
 .admin-sidebar .active-btn {
-    background-color: rgb(217, 213, 213);
+    background-color: #f1efef;
 }
 
 .admin-sidebar .home-btn {
