--- a/vite-react-app/src/components/Navbar/Navbar.module.css
+++ b/vite-react-app/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #8e44ad;
+  background-color: #1E293B;
   display: flex;
   justify-content: space-between;
   align-items: center;
