--- a/vite-react-app/src/pages/Messages/Message.css
+++ b/vite-react-app/src/pages/Messages/Message.css
@@ -5,14 +5,15 @@
 }
 
 .templates-dashboard {
+ background-color: #f9fafb;
+  font-family: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif';
+  border: 0.01rem solid black;
+  border-radius: 2rem;
   width: 84vw;
+  overflow: hidden;
+  min-height: 600px;
   margin: 0 auto;
-  padding: 2rem;
-  background-color: #fff;
-  min-height: 88vh;
-  position: relative;
-  border: 1px solid black;
-  border-radius: 40px;
+  padding:35px;
 }
 
 .dashboard-header {
