--- a/vite-react-app/src/pages/Products/ProductsList.css
+++ b/vite-react-app/src/pages/Products/ProductsList.css
@@ -561,3 +561,11 @@
     gap: 0.25rem;
   }
 }
+
+.product-preview{
+  padding:2rem;
+  border:1px solid rgb(202, 196, 196);
+  border-radius: 1rem;
+  overflow-y:auto;
+  max-height: 10rem;
+}
