--- a/vite-react-app/src/pages/AdminRoles/DeleteAdmin.css
+++ b/vite-react-app/src/pages/AdminRoles/DeleteAdmin.css
@@ -31,14 +31,14 @@
   font-size: large;
 }
 
-.modal-actions {
+.delete-modal-actions {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
   /* margin-top: 25px; */
 }
 
-.cancel-btn {
+.delete-cancel-btn {
   background-color: #f5f5f5;
   color: #333;
   border: 1px solid #ddd;
@@ -49,7 +49,7 @@
   transition: background-color 0.3s;
 }
 
-.cancel-btn:hover {
+.delete-cancel-btn:hover {
   background-color: #e0e0e0;
 }
 
