--- a/vite-react-app/src/pages/Admin/Admin.css
+++ b/vite-react-app/src/pages/Admin/Admin.css
@@ -1,4 +1,5 @@
 .admin-container {
+    /* margin-top: 50px; */
     height: 90vh;
     width:99vw;
     display: flex;
@@ -6,7 +7,8 @@
 }
 
 .admin-main {
-    height: 94vh;
+    margin-top: 50px;
+    height: 100vh;
     overflow-y: auto;
     padding-left: 2rem;
     font-size: 3rem;
@@ -22,6 +24,7 @@
 }
 
 .admin-sidebar {
+    margin-top: 50px;
     flex-basis: 12vw;
     display: flex;
     flex-direction: column;
@@ -29,6 +32,7 @@
     border: 0.01rem solid #a2a2a2;
     background-color: #F1F5F9;
     color:#0F172A;
+    height: 100%;
 }
 
 .admin-title {
