--- a/vite-react-app/src/pages/Salespersons/Salespersons.css
+++ b/vite-react-app/src/pages/Salespersons/Salespersons.css
@@ -292,3 +292,132 @@
     flex-direction: column;
   }
 }
+
+/* salesperon -info css */
+.salesperson-info-container {
+  padding: 24px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #fafafa;
+  min-height: 100vh;
+  color: #333;
+  border:1px solid rgb(226, 216, 216);
+  box-shadow: rgb(226, 216, 216);
+  border-radius: 0.6rem;
+  margin-top: 2rem;
+}
+
+.salesperson-info-container h1 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+  color: #111827;
+}
+
+.salesperson-info-container h3 {
+  margin-top: 10px;
+  color: #047857; /* green tone */
+  font-weight: 500;
+}
+
+/* ------------------ Filters ------------------ */
+.salesperson-info-filters {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 25px;
+  flex-wrap: wrap;
+  padding: 15px;
+  border: 1px solid #e5e7eb;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  align-items: center;
+
+}
+
+.salesperson-info-filter-group {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  min-width: 160px;
+}
+
+.salesperson-info-filter-group label {
+  font-size: 0.9rem;
+  color: #374151;
+  font-weight: 500;
+}
+
+.salesperson-info-filter-group input {
+  padding: 8px 10px;
+  border: 1px solid #d1d5db;
+  border-radius: 6px;
+  font-size: 0.95rem;
+  transition: border 0.2s ease;
+}
+
+.salesperson-info-filter-group input:focus {
+  border-color: #3b82f6;
+  outline: none;
+}
+
+.salesperson-info-button {
+
+  height:fit-content;
+  background-color: #111827;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 2rem;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.salesperson-info-button:hover {
+  background-color: #666769;
+}
+
+/* ------------------ Table ------------------ */
+.salesperson-info-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+.salesperson-info-table th,
+.salesperson-info-table td {
+  border-bottom: 1px solid #e5e7eb;
+  padding: 12px 14px;
+  text-align: center;
+  font-size: 0.95rem;
+}
+
+.salesperson-info-table th {
+  background-color: #f3f4f6;
+  font-weight: 600;
+  color: #111827;
+}
+
+.salesperson-info-table tbody tr:hover {
+  background-color: #eaebec;
+}
+
+.salesperson-info-table td {
+  color: #374151;
+}
+
+/* Make table scrollable on smaller screens */
+@media (max-width: 900px) {
+  .salesperson-info-table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+}
