--- a/vite-react-app/src/pages/Messages/Message.css
+++ b/vite-react-app/src/pages/Messages/Message.css
@@ -9,10 +9,10 @@
   font-family: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif';
   border: 0.01rem solid black;
   border-radius: 2rem;
-  width: 84vw;
+  /* width: 84vw; */
   overflow: hidden;
   min-height: 600px;
-  margin: 0 auto;
+  margin-right: 1rem;
   padding:35px;
 }
 
