--- a/vite-react-app/src/pages/Salespersons/Salespersons.css
+++ b/vite-react-app/src/pages/Salespersons/Salespersons.css
@@ -3,10 +3,10 @@
   font-family: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif';
   border: 0.01rem solid black;
   border-radius: 2rem;
-  width: 84vw;
-  overflow: hidden;
+  /* width: 84vw; */
+  /* overflow: hidden; */
   min-height: 600px;
-  margin: 0 auto;
+  margin-right: 1rem;
   padding:35px;
 }
 
@@ -90,12 +90,13 @@
   display: flex;
   align-items: center;
 }
-.table-container {
+.salesperson-table-container {
   background: white;
   border: 0.5px solid rgb(207, 202, 202);
   border-radius: 0.75rem;
-  overflow: hidden;
-  /* overflow: auto; */
+  /* overflow: hidden; */
+  /* overflow: scroll; */
+  overflow-x: auto;
   font-size: medium;
   /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); */
 }
@@ -103,7 +104,7 @@
 .salesperson-list {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed;
+  /* table-layout: fixed; */
   /* overflow:scroll; */
   
 }
