--- a/vite-react-app/src/pages/Web/Web.css
+++ b/vite-react-app/src/pages/Web/Web.css
@@ -4,9 +4,10 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   border: 0.01rem solid black;
   border-radius: 2rem;
-  width: 84vw;
+  /* width: 84vw; */
   overflow: hidden;
   height: inherit;
+  margin-right: 1rem;
 }
 
 .mainContent {
